--- a/css/index.css
+++ b/css/index.css
@@ -162,7 +162,7 @@ p {
 header {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: baseline;
   margin: 20px 0 30px;
 }
 header nav {
@@ -174,6 +174,22 @@ header nav a {
   text-decoration: none;
   color: #000;
   font-size: 14px;
+}
+/* CSS Animations for NAV items */
+@keyframes navMouseoverAnimations {
+  from {
+    color: black;
+    text-shadow: none;
+  }
+  to {
+    color: blue;
+    text-shadow: -1px 0 grey, 0 1px grey, 1px 0 grey, 0 -1px grey;
+  }
+}
+header nav a:hover {
+  animation-name: navMouseoverAnimations;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
 }
 
 /* Unique to sub-pages: about, products, blog, contact
@@ -323,4 +339,37 @@ footer nav {
 footer nav a {
   color: white;
   text-decoration: none;
+}
+
+/* Responsive Elements for different devices */
+
+/* Only display Text logo on small screens */
+.pLogo {
+  display: none;
+}
+/* Move main content boxes to centered single rows on small screens */
+@media screen and (max-width: 800px) {
+  .container {
+    width: 100%;
+  }
+  .top-content {
+    align-items: center;
+  }
+  .top-content .sub-text-container {
+    width: 384px;
+  }
+  /* Allow images to shrink to screen size */
+  main img {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 640px) {
+  header img {
+    display: none;
+  }
+  .pLogo {
+    display: block;
+    text-decoration: underline;
+    font-size: 18px;
+  }
 }
