Added contact.html and stylized with CSS

--- a/css/index.css
+++ b/css/index.css
@@ -363,6 +363,36 @@ footer nav a {
     width: 100%;
   }
 }
+
+/* contact.html */
+
+.contact {
+  text-align: center;
+}
+.contact form {
+  margin-top: 50px;
+}
+.contact form div {
+  width: 300px;
+  text-align: left;
+  margin: 10px auto;
+  display: flex;
+  justify-content: flex-end;
+}
+.contact form div input {
+  width: 175px;
+}
+.contact form button {
+  width: 140px;
+  height: 35px;
+  border: 1px solid black;
+  background: transparent;
+  margin: 20px 0 40px;
+}
+.contact form img {
+  margin-bottom: 30px;
+}
+
 @media screen and (max-width: 640px) {
   header img {
     display: none;
